feat: Extend Gemini context with full player tracker data
Adds 10 selectable context types for Gemini chat (labs, ultimate weapons,
modules inventory, farming/tournament presets, workshop, guardians, bots,
relics, player currencies), each backed by a dedicated ChatContext class.
Module type labels are included explicitly to prevent Gemini misclassification.

Also fixes UW stat parsing to use Double by default (handles sheet values
like "10.0") and strips "m" unit suffix in UltimateWeaponUtils.

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>